--- a/react-rmh/public/index.html
+++ b/react-rmh/public/index.html
@@ -7,9 +7,9 @@
     <meta name="theme-color" content="#000000" />
     <meta
       name="description"
-      content="Web site created using create-react-app"
+      content="Ronin Movie Hub is Automatic Updating Open Movie Library."
     />
-    <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
+    <link rel="apple-touch-icon" href="R.png" />
     <link href="https://fonts.googleapis.com/css2?family=Abel&display=swap" rel="stylesheet">
     <!--
       manifest.json provides metadata used when your web app is installed on a
